Anton/added update user photo (#15)
* added reset-token model

* added reset-token model

* Added restore password routes, controllers, email template

* Formatted

* Added separate endpoint for password change, Update endpoit refactored

* added update user photo

* fix bug with user controllers

* update swagger.json
